flang/test/Semantics/cuf-proc-attr-error.cuf
! RUN: %python %S/test_errors.py %s %flang_fc1
! Test conflicting CUDA subprogram attributes
module m1
 contains
  !ERROR: expected DEVICE, GLOBAL, GRID_GLOBAL, or HOST attribute
  attributes() subroutine empty1; end
  !ERROR: expected DEVICE, GLOBAL, GRID_GLOBAL, or HOST attribute
  attributes(managed) subroutine badAttr1; end
end
